--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     
+    <span><strong>Il tuo biglietto verrà a costare:</strong></span>
+    <span id="price"><strong></strong></span>
 
     <script src="./js/app.js"></script>
 </body>
